infra/ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deployhub-ui
  namespace: deployhub-system
spec:
  parentRefs:
    - name: deployhub-gateway
      namespace: deployhub-system
      sectionName: https
  hostnames:
    - "deployhub.jeneeldumasia.codes"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: deployhub-ui
          port: 80
